@@ -186,44 +186,47 @@ Usage: nano [option] +LINE <file>\n\
   {"Cannot move edit win", 153},
   {"Cannot resize bottom win", 154},
   {"Cannot move bottom win", 155},
-  {"Main: set up windows\n", 156},
-  {"Main: bottom win\n", 157},
-  {"Main: open file\n", 158},
-  {"I got Alt-[-%c! (%d)\n", 159},
-  {"I got Alt-%c! (%d)\n", 160},
-  {"Case Sensitive Regexp Search%s%s", 161},
-  {"Regexp Search%s%s", 162},
-  {"Case Sensitive Search%s%s", 163},
-  {"Search%s%s", 164},
-  {" (to replace)", 165},
-  {"Search Cancelled", 166},
-  {"Search Wrapped", 167},
-  {"Replaced %d occurences", 168},
-  {"Replaced 1 occurence", 169},
-  {"Replace Cancelled", 170},
-  {"Replace with [%s]", 171},
-  {"Replace with", 172},
-  {"Replace this instance?", 173},
-  {"Enter line number", 174},
-  {"Aborted", 175},
-  {"Come on, be reasonable", 176},
-  {"Only %d lines available, skipping to last line", 177},
-  {"actual_x_from_start for xplus=%d returned %d\n", 178},
-  {"input '%c' (%d)\n", 179},
-  {"New Buffer", 180},
-  {"  File: ...", 181},
-  {"Modified", 182},
-  {"Moved to (%d, %d) in edit buffer\n", 183},
-  {"current->data = \"%s\"\n", 184},
-  {"I got \"%s\"\n", 185},
-  {"Yes", 186},
-  {"All", 187},
-  {"No", 188},
-  {"do_cursorpos: linepct = %f, bytepct = %f\n", 189},
-  {"line %d of %d (%.0f%%), character %d of %d (%.0f%%)", 190},
-  {"Dumping file buffer to stderr...\n", 191},
-  {"Dumping cutbuffer to stderr...\n", 192},
-  {"Dumping a buffer to stderr...\n", 193},
+  {"%s enable/disable", 156},
+  {"enabled", 157},
+  {"disabled", 158},
+  {"Main: set up windows\n", 159},
+  {"Main: bottom win\n", 160},
+  {"Main: open file\n", 161},
+  {"I got Alt-[-%c! (%d)\n", 162},
+  {"I got Alt-%c! (%d)\n", 163},
+  {"Case Sensitive Regexp Search%s%s", 164},
+  {"Regexp Search%s%s", 165},
+  {"Case Sensitive Search%s%s", 166},
+  {"Search%s%s", 167},
+  {" (to replace)", 168},
+  {"Search Cancelled", 169},
+  {"Search Wrapped", 170},
+  {"Replaced %d occurences", 171},
+  {"Replaced 1 occurence", 172},
+  {"Replace Cancelled", 173},
+  {"Replace with [%s]", 174},
+  {"Replace with", 175},
+  {"Replace this instance?", 176},
+  {"Enter line number", 177},
+  {"Aborted", 178},
+  {"Come on, be reasonable", 179},
+  {"Only %d lines available, skipping to last line", 180},
+  {"actual_x_from_start for xplus=%d returned %d\n", 181},
+  {"input '%c' (%d)\n", 182},
+  {"New Buffer", 183},
+  {"  File: ...", 184},
+  {"Modified", 185},
+  {"Moved to (%d, %d) in edit buffer\n", 186},
+  {"current->data = \"%s\"\n", 187},
+  {"I got \"%s\"\n", 188},
+  {"Yes", 189},
+  {"All", 190},
+  {"No", 191},
+  {"do_cursorpos: linepct = %f, bytepct = %f\n", 192},
+  {"line %d of %d (%.0f%%), character %d of %d (%.0f%%)", 193},
+  {"Dumping file buffer to stderr...\n", 194},
+  {"Dumping cutbuffer to stderr...\n", 195},
+  {"Dumping a buffer to stderr...\n", 196},
 };
 
-int _msg_tbl_length = 193;
+int _msg_tbl_length = 196;
